--- a/src/main/resources/templates/course-list.html
+++ b/src/main/resources/templates/course-list.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" th:href="@{/}">Home</a>
 	<div class="collapse navbar-collapse">
 		<ul class="navbar-nav mr-auto">
@@ -33,6 +33,10 @@
 	</div>
 </nav>
 <div class="container">
+
+	<br>
+	<br>
+	<br>
 
 
 
