--- a/src/main/resources/templates/student-list.html
+++ b/src/main/resources/templates/student-list.html
@@ -54,7 +54,7 @@
             <th>Id</th>
             <th>Student Name</th>
             <th>Courses</th>
-            <th>Aadhar</th>
+            <th>SRN</th>
         </tr>
         </thead>
 
@@ -70,7 +70,7 @@
             </td>
             <td>
                 <p th:if="${temp.aadhar}" th:text="${temp.aadhar.number}" /> <!-- Display Aadhar number if exists -->
-                <a th:if="!${temp.aadhar}" th:href="@{'/aadhar/add?id='+${temp.id}}">Add Aadhar</a> <!-- Link to add Aadhar if not exists -->
+                <a th:if="!${temp.aadhar}" th:href="@{'/aadhar/add?id='+${temp.id}}">Add SRN</a> <!-- Link to add Aadhar if not exists -->
             </td>
         </tr>
         </tbody>
